# beam-patcher

./: CHANGELOG.md  CONFIGURATION_GUIDE.md  Cargo.toml  LICENSE  QUICK_REFERENCE.md  README.md  UPDATE_SUMMARY.md  config.example.updated.yml
beam-core/src/: config.rs  downloader.rs  lib.rs  patcher.rs  verifier.rs
beam-formats/src/: beam.rs  rgz.rs  thor.rs
beam-patcher/src/: main.rs
beam-ui/: Cargo.toml  tauri.conf.json
beam-ui/public/: index.html
beam-ui/src/: commands.rs  lib.rs
