[workspace]
members = [
    "beam-patcher",
    "beam-core",
    "beam-formats",
    "beam-ui"
]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Beam Patcher Team"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["stream", "native-tls"] }
flate2 = "1.0"
crc32fast = "1.3"
sha2 = "0.10"
md5 = "0.7"
des = "0.8"
futures = "0.3"
async-trait = "0.1"
bytes = "1.5"
